--- a/Discord.html
+++ b/Discord.html
@@ -16,7 +16,7 @@
         <a href="#" class="logo">Genetic Studios.</a>
 
         <nav class="navbar">
-            <a href="Index.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="About.html">About</a>
             <a href="Discord.html" class="active">Discord</a>
         </nav>
